# edgelessrt

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
common/: bitset.c  (+2 more)
ert/: CMakeLists.txt  oeedger8r-cpp.patch
ert/common/: bitset.c  bitset.h  final_action.h  ringbuffer.c
ert/enclave/: args.c  eventfd.c  eventfd.h  internalsock.c
ert/ertlibc/: CMakeLists.txt  __vasprintf_chk.c  customfs.c  ertthread.h  locale.cpp  new_thread.h  pthread.cpp  sched.cpp  signal.cpp  signal_manager.cpp  signal_manager.h  spinlock.h  stdio.cpp  stdlib.cpp  stubs.cpp  syscall.cpp  syscalls.h
ert/ertlibc/memfs/: file.cpp  file.h  filesystem.h
ert/host/: calls.cpp  core.c  debug.cpp  enclave_thread_manager.cpp  erthost.cmake  ocall_tracer.cpp  thread.cpp
ert/libc/: CMakeLists.txt  ertfutex.c  locale.c  mman.c  pthread.c  syscalls.c
ert/meshentry/: CMakeLists.txt  emain.cpp  emain.edl
ert/tests/: test.edl
ert/tests/bitset/: CMakeLists.txt
ert/tests/concurrent_stdout/: CMakeLists.txt  enc.cpp
ert/tests/customentry/: enc.cpp
ert/tests/customfs/: CMakeLists.txt  main.c
ert/tests/deventry/: enc.cpp
ert/tests/devhost/: CMakeLists.txt  enc.cpp
ert/tests/go/: CMakeLists.txt
ert/tests/go_seal/: CMakeLists.txt  enc.cpp  gotest.go
ert/tests/host/: CMakeLists.txt  host.cpp
ert/tests/libc/: CMakeLists.txt  libc.edl
ert/tests/lingering_threads/: CMakeLists.txt  enc.cpp
ert/tests/memfs/: CMakeLists.txt  enc.cpp
ert/tests/meshentry_go_app/: CMakeLists.txt  go.mod  main.c  main.go  mesh.go
ert/tests/meshentry_nongo_app/: CMakeLists.txt  enc.cpp
ert/tests/meshentry_premainmock/: CMakeLists.txt
ert/tests/misc_syscalls/: CMakeLists.txt
ert/tests/mman/: enc.cpp
ert/tests/pthread_create/: CMakeLists.txt  enc.cpp
ert/tests/ringbuffer/: enc.cpp
ert/tests/sem/: CMakeLists.txt
ert/tests/signal/: enc.cpp
ert/tests/stdcxx/: CMakeLists.txt  stdcxx.edl
ert/tests/template/: CMakeLists.txt
ert/tests/threadcpp/: CMakeLists.txt
ert/tests/threadcxx/: CMakeLists.txt  threadcxx.edl
ert/tests/trace_ocalls/: enc.cpp
ert/tests/util/: CMakeLists.txt
ert/tools/devhost/: CMakeLists.txt  devhost.cpp
ert/tools/erthost/: CMakeLists.txt  deventry.c  emain.edl  erthost.cpp  meshentry.cpp
samples/partitioned_app_with_golib/: CMakeLists.txt  README.md  helloworld.edl
samples/partitioned_app_with_golib/enclave/: CMakeLists.txt  enc.c
samples/partitioned_app_with_golib/golib/: CMakeLists.txt  hello.go
samples/stdc++/: CMakeLists.txt  README.md
samples/stdc++/app/: hello.cpp
samples_edgeless/go/: CMakeLists.txt  README.md  main.c
samples_edgeless/rust/: CMakeLists.txt  README.md
samples_edgeless/rust/app/: Cargo.toml
samples_edgeless/stdc++/: CMakeLists.txt  README.md
samples_edgeless/stdc++/app/: CMakeLists.txt
samples_edgeless/vault/: CMakeLists.txt  README.md
src/: CMakeLists.txt  CTestTestfile.cmake  ert-config.cmake  openenclaverc.in
src/ert/: CMakeLists.txt  oeedger8r-cpp.patch
src/ert/common/: bitset.c  bitset.h  mmapfs.h  ringbuffer.h  vdso.h
src/ert/enclave/: args.c  hostfsmmap.c  internalsock.c
src/ert/host/: calls.cpp  core.c  debug.h  enclave_thread_manager.cpp  enclave_thread_manager.h  erthost.cmake  fd.h  mmapfs.cpp  ocall_tracer.cpp  restart.cpp  syscall.cpp  thread.cpp  thread.h  vdso.cpp
src/ert/libc/: CMakeLists.txt  chk.c  ertfutex.c  ertfutex.h  getaddrinfo.c  misc.c  mman.c  mman.h  newlocale.c  payload_image.c  pthread.c  pthreadhooks.c  strerror_r.c  syscalls.c  threaded.c
src/ert/oesign/: eradump.cpp
src/ertlibc/: CMakeLists.txt  customfs.c  dynlink.cpp  ertthread.h  locale.cpp  locale.h  memfs.cpp  misc.cpp  new_thread.cpp  pthread.cpp  resource.cpp  sched.cpp  signal.cpp  signal.h  signal_manager.cpp  signal_manager.h  span.h  statfs.cpp  stdio.cpp  stdlib.cpp  stubs.cpp  syscall.cpp  syscall.h  syscalls.h  time.cpp  unistd.cpp  util.cpp
src/ertlibc/memfs/: filesystem.cpp  memfs.cpp
src/meshpremain/: CMakeLists.txt  go.mod  go.sum
src/tests/: CMakeLists.txt  test.edl  tests_ex.h
src/tests/args/: CMakeLists.txt  host.cpp  test.edl
src/tests/bitset/: CMakeLists.txt  enc.cpp
src/tests/concurrent_stdout/: CMakeLists.txt
src/tests/customentry/: CMakeLists.txt
src/tests/customfs/: CMakeLists.txt  enc.c
src/tests/deventry/: CMakeLists.txt  enc.cpp
src/tests/eventfd/: CMakeLists.txt  enc.cpp
src/tests/executable_heap/: CMakeLists.txt  enc.cpp  executable.conf
src/tests/go/: CMakeLists.txt  enc.cpp  gotest.go  removeall.go
src/tests/go_net/: CMakeLists.txt  enc.cpp  gotest.go
src/tests/go_ra/: CMakeLists.txt  host.cpp
src/tests/go_seal/: CMakeLists.txt  enc.cpp  go.mod  gotest.go
src/tests/host/: CMakeLists.txt  host.cpp
src/tests/libc/: CMakeLists.txt  libc.edl  tests.cmake
src/tests/libc_whole_archive/: CMakeLists.txt  enc.cpp
src/tests/lingering_threads/: CMakeLists.txt  enc.cpp  host.cpp  nondebug_host.cpp  test.edl
src/tests/mbedtls_version/: CMakeLists.txt  enc.cpp
src/tests/memfs/: CMakeLists.txt  enc.cpp
src/tests/meshentry_go_app/: CMakeLists.txt  main.c
src/tests/meshentry_nongo_app/: CMakeLists.txt  enc.cpp
src/tests/meshentry_premainmock/: CMakeLists.txt  go.mod  main.go
src/tests/misc_syscalls/: CMakeLists.txt  enc.cpp
src/tests/mman/: CMakeLists.txt  enc.cpp
src/tests/mmapfs/: CMakeLists.txt
src/tests/mmapfs2/: CMakeLists.txt  enc.cpp
src/tests/mmapfs3/: CMakeLists.txt  enc.cpp
src/tests/payload_data/: CMakeLists.txt  enc.cpp  patch.go  payload.c
src/tests/payload_image/: CMakeLists.txt  enc.cpp  payload.c
src/tests/payload_image_and_linked/: CMakeLists.txt  enc.cpp  enclave.conf  linked.c  payload.c
src/tests/payload_linked_only/: CMakeLists.txt  enc.cpp  linked.c
src/tests/payload_tls/: CMakeLists.txt  enc.cpp  payload.c  reserved_tls.c
src/tests/pthread_create/: CMakeLists.txt  enc.cpp
src/tests/restart/: CMakeLists.txt  enc.cpp
src/tests/ringbuffer/: CMakeLists.txt  enc.cpp
src/tests/sem/: CMakeLists.txt
tests/devhost/: CMakeLists.txt  enc.cpp
tests/trace_ocalls/: CMakeLists.txt  test.edl
(+333 files in other folders)
