add_subdirectory(ertlibc)
add_subdirectory(libc)
add_subdirectory(meshentry)
add_subdirectory(tools/devhost)
add_subdirectory(tools/ertgo)

install(FILES ${PROJECT_SOURCE_DIR}/include/openenclave/ert.h
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/openenclave/)

# Define the `OE_SGX` macro used by the oeedger8r on the SGX build.
if (OE_SGX)
  set(DEFINE_OE_SGX "-DOE_SGX")
endif ()

add_subdirectory(tests/concurrent_stdout)
add_subdirectory(tests/devhost)
add_subdirectory(tests/go)
add_subdirectory(tests/go_seal)
add_subdirectory(tests/host)
add_subdirectory(tests/libc)
add_subdirectory(tests/lingering_threads)
add_subdirectory(tests/memfs)
add_subdirectory(tests/meshentry_nongo_app)
add_subdirectory(tests/meshentry_premainmock)
add_subdirectory(tests/misc_syscalls)
add_subdirectory(tests/pthread_create)
add_subdirectory(tests/sem)
add_subdirectory(tests/stdcxx)
add_subdirectory(tests/template)
add_subdirectory(tests/threadcpp)
add_subdirectory(tests/threadcxx)
